fix: cree endpoints de busqueda
